<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".DashboardActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/arrow_back"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/todo"
                app:tint="@color/blue"/>

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laforte"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"/>
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>
    <!-- Box container -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        android:background="@color/white"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/post_input"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@android:color/transparent"
            android:gravity="top|start"
            android:hint="@string/write_something"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:padding="12dp"
            android:textSize="16sp" />

        <!-- Attach icon in bottom-right corner -->
        <ImageView
            android:id="@+id/attach_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
            android:src="@drawable/attach"
            android:contentDescription="@string/attach_file"
            app:tint="@color/grey"
            android:layout_gravity="bottom"/>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/post_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/blue"
        android:text="@string/post"
        android:textAllCaps="false"
        android:textColor="@color/white" />


</LinearLayout>